# robot_devastator_ws

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md
docs/: aide-memoire.md  architecture_cible.md  architecture_modulaire.md  carte_ros_apprentissage.md  connexions.md  contrat_pico_ros2.md  etat.md  fiche_architecture.md  formation_ros2_devastator.md  inventaire_composantes.md  journal_essais.md  parametres.md
scripts/: nettoyer_packages_ros.sh  nettoyer_workspace_ros.sh  test_encodeurs.py
src/: diagnostic_ros2.sh
src/commun/: CMakeLists.txt  README.md  package.xml
src/commun/msg/: ConsigneMoteurs.msg  EtatEncodeurs.msg
src/commun/srv/: GenererAudio.srv  JouerAudio.srv  Parler.srv
src/interface_pico/: README.md  package.xml  setup.cfg  setup.py
src/interface_pico/interface_pico/: __init__.py  essai_moteurs_borne.py  interface_pico.py  transport_serie_pico.py
src/interface_pico/launch/: interface_pico.launch.py
src/robot_devastator/: README.md  package.xml  setup.cfg  setup.py
src/robot_devastator/robot_devastator/: annonces_audio.py  arbitre_commande_moteurs.py  evitement_obstacle.py  principal.py  teleop_clavier.py  teleoperation_clavier.py  voix_piper.py  voix_piper_service.py
src/robot_devastator_bringup/: CMakeLists.txt  README.md  package.xml
src/robot_devastator_bringup/config/: annonces_audio.yaml  arbitre_commande_moteurs.yaml  autonomie_simple.yaml  interface_pico.yaml  interface_pico_reel.yaml  interface_pico_simulation.yaml  mecanique.yaml  principal.yaml  teleop_clavier.yaml  voix_piper.yaml
src/robot_devastator_bringup/launch/: autonomie_simple.launch.yaml  autonomie_simple_reel.launch.yaml  autonomie_simple_simulation.launch.yaml  devastator.launch.yaml  interface_pico.launch.yaml  interface_pico_reel.launch.yaml  interface_pico_simulation.launch.yaml
src/robot_devastator_description/: CMakeLists.txt  package.xml
src/robot_devastator_description/config/: devastator.rviz
src/robot_devastator_description/launch/: affichage.launch.py
src/robot_devastator_description/urdf/: capteurs.xacro  corps.xacro  devastator.urdf.xacro  roues.xacro
