<?xml version="1.0"?>
<package format="3">
  <name>commun</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="taubore@todo.todo">taubore</maintainer>
  <license>TODO: License declaration</license>

  <!-- Obligatoire pour ament -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dépendances pour générer des interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Retiré std_msgs car non utilisé ici -->
  <!-- <depend>std_msgs</depend> -->
  <!-- <depend>std_srvs</depend> --> 
  <!-- Si tu en as besoin plus tard, réajoute-le -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>