<?xml version="1.0"?>
<package format="3">
  <name>commun</name>
  <version>0.0.0</version>
  <description>Robot Devastator - Interface</description>
   <maintainer email="louis.st-hilaire@hotmail.com">taubore</maintainer>
  <license>MIT</license>

  <!-- Outil de build obligatoire pour un package ROS 2 basé sur ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Nécessaire pendant la compilation pour générer le code des fichiers .srv et .msg -->
  <build_depend>rosidl_default_generators</build_depend>
  
  <!-- Nécessaire à l'execution pour que les autres packages utilisent les interfaces generées -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- À ajouter seulement si les définitions .srv referencent ces types -->
  <!-- <depend>std_msgs</depend> -->
  <!-- <depend>std_srvs</depend> --> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Marque ce package comme package d'interfaces ROS 2 pour rosidl -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
