<?xml version="1.0"?>
<package format="3">
  <name>interface_pico</name>
  <version>0.0.0</version>
  <description>Interface ROS 2 simple entre le Raspberry Pi 4 et le Raspberry Pi Pico WH.</description>
  <maintainer email="louis.st-hilaire@hotmail.com">taubore</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>commun</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>python3-serial</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
